--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,23 @@
+# logging
 logging.level.com.lunz.springit=TRACE
 
+# info about our application
 info.application.name=Springit
-info.application.description=Reddit clone using Spring Boot 2
+info.application.description=Reddit clone using Spring Boot 2.5.5
 info.application.version=0.0.1
 
+# actuator
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
+
+# h2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# datasource (default to testdb)
+spring.datasource.url=jdbc:h2:mem:springit
+spring.datasource.username=sa
+spring.datasource.password=
+
+# JPA & Hibernate
+spring.jpa.show-sql=true
