Setting our in-memory db

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,13 @@ spring.datasource.password=
 
 # JPA & Hibernate
 spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=create-drop (create) (none)
+
+# mysql settings
+#spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:mysql://localhost:3306/springit?allowPublicKeyRetrieval=true&useSSL=false
+#spring.datasource.username=springit
+#spring.datasource.password=
+
+# spring boot 2 this is required for all non in-memory db
+#spring.datasource.initialization-mode=always
