--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,4 +33,7 @@ spring.datasource.password=
 # spring boot 2 this is required for all non in-memory db
 #spring.datasource.initialization-mode=always
 
-spring.security.user.roles=ADMIN
+#spring.security.user.roles=ADMIN
+
+spring.mail.host=localhost
+spring.mail.port=1025
