--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,5 +35,20 @@ spring.datasource.password=
 
 #spring.security.user.roles=ADMIN
 
-spring.mail.host=localhost
-spring.mail.port=1025
+#spring.mail.host=localhost
+#spring.mail.port=1025
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=zhanglnju2015@gmail.com
+spring.mail.password=Danshengou4wo!
+
+# Other properties
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
+# TLS , port 587
+spring.mail.properties.mail.smtp.starttls.enable=true
+#management.health.mail.enabled=false
