--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,5 @@
-# logging
-logging.level.com.lunz.springit=TRACE
-
 # info about our application
-info.application.name=Springit
+info.application.name=RedditClone
 info.application.description=Reddit clone using Spring Boot 2.5.5
 info.application.version=0.0.1
 
@@ -10,45 +7,5 @@ info.application.version=0.0.1
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=when_authorized
 
-# h2
-#spring.h2.console.enabled=true
-#spring.h2.console.path=/h2-console
-
-# datasource (default to testdb)
-#spring.datasource.url=jdbc:h2:mem:springit
-#spring.datasource.username=sa
-#spring.datasource.password=
-
-# JPA & Hibernate
+# sql
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create-drop
-#(create) (none)
-
-# mysql settings
-#spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/springit?allowPublicKeyRetrieval=true&useSSL=false
-spring.datasource.username=springit
-spring.datasource.password=
-
-# spring boot 2 this is required for all non in-memory db
-#spring.datasource.initialization-mode=always
-
-#spring.security.user.roles=ADMIN
-
-#spring.mail.host=localhost
-#spring.mail.port=1025
-
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=zhanglnju2015@gmail.com
-spring.mail.password=Danshengou4wo!
-
-# Other properties
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.connectiontimeout=5000
-spring.mail.properties.mail.smtp.timeout=5000
-spring.mail.properties.mail.smtp.writetimeout=5000
-
-# TLS , port 587
-spring.mail.properties.mail.smtp.starttls.enable=true
-#management.health.mail.enabled=false
