--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,14 +1,14 @@
 # mysql settings
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create-drop
 
-#spring.datasource.url=jdbc:mysql://localhost:3306/springit?allowPublicKeyRetrieval=true&useSSL=false
-#spring.datasource.username=springit
+spring.datasource.url=jdbc:mysql://localhost:3306/springit?allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.username=springit
+spring.datasource.password=
+
+#spring.datasource.url=jdbc:mysql://aa19t4qcwkcpzcx.cym7mkspopxi.us-east-2.rds.amazonaws.com:3306/ebdb
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+#spring.datasource.username=
 #spring.datasource.password=
-
-spring.datasource.url=jdbc:mysql://aa19t4qcwkcpzcx.cym7mkspopxi.us-east-2.rds.amazonaws.com:3306/ebdb
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
-spring.datasource.username=lunz
-spring.datasource.password=Danshengou4wo
 
 #spring.datasource.initialization-mode=always
 
@@ -19,9 +19,9 @@ spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.writetimeout=5000
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=zhanglnju2015@gmail.com
-spring.mail.password=Danshengou4wo!
+spring.mail.username=
+spring.mail.password=
 #spring.mail.host=email-smtp.us-east-2.amazonaws.com
 #spring.mail.port=25
-#spring.mail.username=
-#pring.mail.password=
+#spring.mail.username=AKIAW6LYPQTFOZK5EDW3
+#spring.mail.password=BDLOK8Ql5rPkeVnx8bnZNFJ/7T+x58bJ6hwo7fXY87RB
