--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,3 +1,4 @@
+server.port=${PORT}
 # mysql settings
 spring.jpa.hibernate.ddl-auto=create
 
@@ -5,7 +6,7 @@ spring.jpa.hibernate.ddl-auto=create
 #spring.datasource.username=springit
 #spring.datasource.password=
 
-spring.datasource.url=jdbc:mysql://aa19t4qcwkcpzcx.cym7mkspopxi.us-east-2.rds.amazonaws.com:3306/ebdb
+spring.datasource.url=jdbc:mysql://aa12i2fdvd93an2.cym7mkspopxi.us-east-2.rds.amazonaws.com:3306/ebdb
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 #spring.datasource.username=
 #spring.datasource.password=
