--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -23,5 +23,5 @@ spring.mail.username=
 spring.mail.password=
 #spring.mail.host=email-smtp.us-east-2.amazonaws.com
 #spring.mail.port=25
-#spring.mail.username=AKIAW6LYPQTFOZK5EDW3
-#spring.mail.password=BDLOK8Ql5rPkeVnx8bnZNFJ/7T+x58bJ6hwo7fXY87RB
+#spring.mail.username=
+#spring.mail.password=
